static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');

html {
    height: 100%;
}

body {
    height: 100%;
    background-color: black;
    color: white;
    font-family: 'Patrick Hand', cursive;
}

.row {
    margin-left: 0;
    margin-right: 0;
}

.line-break {
    border: 1px solid white;
    width: 150px;
    margin-top: 50px;
    margin-bottom: 50px;
}

.hero-text {
    font-size: 7rem;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.navbar-logo {
    position: relative;
    width: 170px;
    left: 15px;
    background-size: contain;
}

.navbar-padding {
    padding-top: 30px;
}

/* The hero image */
.hero-image {
    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/images/index-hero.jpeg");

    /* Set a specific height */
    height: 50%;

    /* Position and center the image to scale nicely on all screens */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.cardio-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/images/cardio-hero.jpeg");
}

.diet-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/images/diet-hero.jpg");
}

.weights-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/images/weights-hero.jpeg");
}

.accessories-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/images/accessories-hero.jpeg");
}

.all-products-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/images/all-products-hero.jpg");
}

.fit-tips-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/images/fit-tips-hero.jpg");
}

/* Place text in the middle of the image */
.hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    outline: 2px solid white;
    padding: 20px;
}

.container-fluid {
    padding-left: 0% !important;
    padding-right: 0% !important;
}

.navbar-brand {
    padding-left: 5px;
}

.about-us {
    font-size: 3rem;
}

.update-link,
.remove-item {
    cursor: pointer;
}

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

.mr-4,
.mx-4 {
    margin-right: 0rem !important;
}

.toast-body {
    color: black;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0;
    height: 0;
    border-left: 4px solid transparent;
    border-right: 4px solid transparent;
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

.allauth-form-inner-content p {
    margin-top: 1.5rem;
    /* mt-4 */
    color: #6c757d;
    /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: white;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
    /* btn */
    display: inline-block;
    font-weight: 400;
    color: black;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: white;
    border: 1px solid white;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {
    color: black;
    background-color: white;
    border-color: white;
}

.allauth-form-inner-content a {
    color: #17a2b8;
    /* text-info */
}

input[name='q']::placeholder {
    color: grey;
}

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: red;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: red;
    border-color: red;
    border-radius: 0;
}

.product-price {
    color: black;
}

p {
    font-size: x-large;
}

.table {
    color: white;
}

.image-overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    transition: .5s ease;
}

.index-category-images .image-overlay {
    opacity: 4;
    background: rgba(0, 0, 0, 0.5);
}

.text {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
}

.card-body {
    color: black;
}

.card-title {
    font-size: 3rem;
}

.card-subtitle {
    font-size: 2rem;
}

.review-section {
    margin-top: 20px;
}

.fit-tips {
    color: black;
    margin-top: 20px;
}

.fit-tip-card {
    width: 50%;
    display: inline-flex;
}

.fit-tip-image-container {
    position: relative;
    text-align: center;
    color: white;
    font-size: 2rem;
}

.fit-tip-image-centered {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

a.fit-tip-tag {
    color: white;
}

textarea {
    width: -webkit-fill-available;
}

.fit-tip-form {
    text-align: center;
}
@media only screen and (max-width: 640px) {
    .hero-text {
        font-size: 4rem;
    }
}


@media (min-width: 1260px) {
    .navbar-expand-xl .navbar-collapse {
        display: -ms-flexbox !important;
        display: flex !important;
        -ms-flex-preferred-size: auto;
        flex-basis: auto;
    }
}

